--- a/.github/workflows/sam-deploy.yml
+++ b/.github/workflows/sam-deploy.yml
@@ -15,20 +15,20 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
-          
+          node-version: "20"
+
       - name: Setup AWS SAM CLI
         uses: aws-actions/setup-sam@v2
-        
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::571705099822:role/GitHubActionsSAMDeployRole
-          aws-region: us-east-1
-          
+          aws-region: ap-northeast-1
+
       - name: SAM Build
         run: sam build
-        
+
       - name: SAM Deploy
         run: |
           sam deploy --stack-name lambda-cicd-stack \
