--- a/.github/workflows/sam-deploy.yml
+++ b/.github/workflows/sam-deploy.yml
@@ -40,6 +40,7 @@ jobs:
             --no-fail-on-empty-changeset
 
       - name: Publish Lambda Version and Update Test Alias
+        id: publish-version
         run: |
           # Lambdaの関数名を取得（SAMのスタック出力から取得する場合）
           FUNCTION_NAME=$(aws cloudformation describe-stacks --stack-name lambda-cicd-stack --query "Stacks[0].Outputs[?OutputKey=='HelloWorldFunction'].OutputValue" --output text)
@@ -65,6 +66,8 @@ jobs:
           VERSION=$(aws lambda publish-version --function-name $FUNCTION_NAME --description "Automated version created by GitHub Actions" --query "Version" --output text)
 
           echo "Published Lambda version: $VERSION"
+          echo "function_name=$FUNCTION_NAME" >> $GITHUB_OUTPUT
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
           # Testエイリアスが既に存在するか確認
           if aws lambda get-alias --function-name $FUNCTION_NAME --name Test &> /dev/null; then
@@ -75,4 +78,55 @@ jobs:
             # エイリアスが存在しない場合は作成
             aws lambda create-alias --function-name $FUNCTION_NAME --name Test --function-version $VERSION
             echo "Created Test alias pointing to version $VERSION"
+          fi
+
+  approve-prod-deployment:
+    needs: build-deploy
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: Get deployment information
+        run: echo "Testエイリアスが更新されました。本番環境（Prodエイリアス）へのデプロイを承認してください。"
+
+  deploy-to-prod:
+    needs: approve-prod-deployment
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: arn:aws:iam::571705099822:role/GitHubActionsSAMDeployRole
+          aws-region: ap-northeast-1
+
+      - name: Update Prod Alias
+        run: |
+          # 前のジョブから関数名とバージョンを取得
+          FUNCTION_NAME="${{ needs.build-deploy.outputs.function_name }}"
+          VERSION="${{ needs.build-deploy.outputs.version }}"
+
+          if [ -z "$FUNCTION_NAME" ] || [ -z "$VERSION" ]; then
+            echo "関数名またはバージョンが取得できませんでした。CloudFormationスタックから再取得します。"
+            
+            FUNCTION_NAME=$(aws cloudformation describe-stacks --stack-name lambda-cicd-stack --query "Stacks[0].Outputs[?OutputKey=='HelloWorldFunction'].OutputValue" --output text)
+            
+            if [[ "$FUNCTION_NAME" == arn:aws:lambda:* ]]; then
+              FUNCTION_NAME=$(echo "$FUNCTION_NAME" | awk -F: '{print $7}')
+            fi
+            
+            # 最新のバージョンを取得
+            VERSION=$(aws lambda list-versions-by-function --function-name $FUNCTION_NAME --query "Versions[-1].Version" --output text)
+          fi
+
+          echo "Lambda関数名: $FUNCTION_NAME"
+          echo "デプロイするバージョン: $VERSION"
+
+          # Prodエイリアスが既に存在するか確認
+          if aws lambda get-alias --function-name $FUNCTION_NAME --name Prod &> /dev/null; then
+            # エイリアスが存在する場合は更新
+            aws lambda update-alias --function-name $FUNCTION_NAME --name Prod --function-version $VERSION
+            echo "Updated Prod alias to version $VERSION"
+          else
+            # エイリアスが存在しない場合は作成
+            aws lambda create-alias --function-name $FUNCTION_NAME --name Prod --function-version $VERSION
+            echo "Created Prod alias pointing to version $VERSION"
           fi
