--- a/.github/workflows/sam-deploy.yml
+++ b/.github/workflows/sam-deploy.yml
@@ -98,6 +98,7 @@ jobs:
   deploy-to-prod:
     needs: approve-prod-deployment
     runs-on: ubuntu-latest
+    environment: develop
     steps:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
