--- a/.github/workflows/sam-deploy.yml
+++ b/.github/workflows/sam-deploy.yml
@@ -23,17 +23,25 @@ jobs:
   prod-deploy:
     needs: approve-prod-deploy
     runs-on: ubuntu-latest
-    environment: production
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "20"
+
       - name: Setup AWS SAM CLI
         uses: aws-actions/setup-sam@v2
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ap-northeast-1
+
       - name: SAM Build
         run: sam build
+
       - name: SAM Deploy
         run: |
           sam deploy --stack-name lambda-cicd-stack \
