--- a/.github/workflows/sam-deploy.yml
+++ b/.github/workflows/sam-deploy.yml
@@ -15,6 +15,7 @@ jobs:
   prod-deploy:
     runs-on: ubuntu-latest
     environment: production
+    steps:
       - uses: actions/checkout@v3
     
       - name: Deploy SAM Application
